--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,6 +17,9 @@ spec:
       containers:
         - name: myapp-container
           image: donetdemo.azurecr.io/myapp:latest   # ACR image
+    imagePullSecrets:
+    - name: acr-secret
+
           ports:
             - containerPort: 80
 ---
